Fixed logo on mobile

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -57,6 +57,11 @@ body {
   padding: 16px;
 }
 
+.logo {
+  width: 480px;
+  max-width: 100%;
+}
+
 .shadow {
   box-shadow: rgb(243 86 56) 0px 50px 100px -20px, #ff8772 0px 30px 60px -30px;
 }
